--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <script src="main.js"></script>
   
   <img src="Images/sasi.jpeg" alt="" />
-  
+  <h2>Need a custom metal fabricator?</h2>
+<p>Whatever shape, size or type of cabinetry you need, count on Sasi fabrication's parts and equipment enclosures from a variety of alloys; steel, hot rolled steel, cold rolled steel, stainless steel, aluminum, copper, brass, & nu-metal. Working from prints, prototypes or simply an idea, we can design and produce equipment enclosures to suit all applications; engineering/prototyping, turret punching, brake forming, laser cutting, shearing, spot welding, Mig/Tig welding, metal finishing, quality auditing, assembly kitting, Pems, thread tapping, warehousing, shipping, tooling, CNC milling, CNC sawing, grinding, turning, stamping, insulation cutting/gluing, powder coating, roll forming, tube bending, plating, and coating. In addition, our craftsmen can fully assemble and insulate finished parts, then ship them ready-to-use.
 </body>
 
 
